; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_rtsp.c_rtsp_teardown.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_rtsp.c_rtsp_teardown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLE_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"\0ARTSP: TEARDOWN %s\0A\00", align 1
@CURLOPT_RTSP_REQUEST = common dso_local global i32 0, align 4
@CURL_RTSPREQ_TEARDOWN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @rtsp_teardown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtsp_teardown(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @CURLE_OK, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %7)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @CURLOPT_RTSP_REQUEST, align 4
  %11 = load i64, i64* @CURL_RTSPREQ_TEARDOWN, align 8
  %12 = call i32 @my_curl_easy_setopt(i32* %9, i32 %10, i64 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @my_curl_easy_perform(i32* %13)
  ret void
}

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @my_curl_easy_setopt(i32*, i32, i64) #1

declare dso_local i32 @my_curl_easy_perform(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
